update postgres/values.yaml, let landlord to be superuser

--- a/helm/postgres/values.yaml
+++ b/helm/postgres/values.yaml
@@ -136,8 +136,10 @@ users:
     databases:
       - jadriver
   - name: landlord
+    options: "SUPERUSER"
     databases:
       - landlord
+      - template_fiw
   - name: buzzin2
     databases:
       - buzzin2
